upload mostly functional test cases ,but still working to revamp update/edit service tickets to allow for option to add/remove both mechanics and inventory items in the same endpoint
